FEAT & REFACTOR: expire verification, added metatags & generate Refresh now is not JWT, renamed sql fields, deleted user table

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 server: "0.0.0.0:8080"
-accessTTL: 5m
-refreshTTL: 100m
+auth:
+  accessTTL: 5m
+  refreshTTL: 100m
 postgres:
   user: "postgres"
   password: "5379"
