FIX & FEAT:  db connection, jwt temp secret, restriction logic for multiple token generate

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-server: "0.0.0.0:8080"
+server: "0.0.0.0:8888"
 auth:
   accessTTL: 5m
   refreshTTL: 100m
@@ -6,6 +6,6 @@ postgres:
   user: "postgres"
   password: "5379"
   host: "localhost"
-  port: "7777"
+  port: 7777
   dbname: "auth"
 
